[package]
name = "cql"
version = "0.1.0"
authors = ["Hugo Dutka <contact@hugodutka.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.33"
lazy_static = "1.4.0"
tokio = { version = "0.3", features = ["net", "io-util", "rt", "macros"] }
