[package]
name = "cql"
version = "0.1.0"
authors = ["Hugo Dutka <contact@hugodutka.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
thiserror = "1.0.21"
tokio = { version = "0.3", features = ["net", "io-util", "rt", "macros"] }

[dev-dependencies]
cdrs = "2.3.3"
cdrs_helpers_derive = "0.3.3"
uuid = "0.8.1"
time = "0.2.22"